--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "chart.js": "^3.6.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-chart-3": "^3.0.3",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
